--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -12,4 +12,12 @@
     .kk-button-group {
         margin: 20px 0 20px 0;
     }
+
+    .kk-spinner-wrapper {
+        position: absolute;
+        z-index: 2;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
