--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -9,7 +9,18 @@
 
 
     .kk-button-group {
-        margin: 20px 0 20px 0;
+        margin-top: 100px;
+
+
+        .kk-type-button {
+            margin: 20px;
+            width: 100px;
+            height: 100px;
+        }
+    }
+
+    .kk-disconnect-button {
+        margin-top: 200px;
     }
 
     .kk-spinner-wrapper {
