--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -19,7 +19,7 @@
         .kk-power-button {
             line-height: 4;
             display: inline-block;
-            background-image: $button-background; 
+            background-color: rgb(167,1,21);
             box-shadow: $button-shadow;
             width: 58px;
             height: 58px;
@@ -45,10 +45,12 @@
             line-height: 3.3;
         }
         
-        .kk-gauge {
+        .kk-step {
+            letter-spacing: 0;
             vertical-align: top;
             display: inline-block;
             line-height: 3.5;
+            color: white;
             width: 58px;
             height: 58px;
         }
@@ -73,6 +75,10 @@
             width: 58px;
             height: 58px;
             border-radius: 4px;
+
+            &:last-child {
+                margin-right: 0;
+            }
         }
     }
 
